@@ -43,6 +43,8 @@ PHP                                                                        NEWS
 - Added optimization for imageline with horizontal and vertial lines (Pierre)
 - Fixed bug #39602 (Invalid session.save_handler crashes PHP). (Dmitry)
 - Fixed bug #39576 (array_walk() doesn't separate userdata zval). (Tony)
+- Fixed bug #39548 (ZMSG_LOG_SCRIPT_NAME not routed to OutputDebugString()
+  on Windows). (Dmitry)
 - Fixed bug #39538 (fgetcsv can't handle starting newlines and trailing odd
   number of backslashes). (David Soria Parra, Pierre)
 - Fixed bug #39454 (Returning a SOAP array segfaults PHP). (Dmitry)
